--- a/ToDo_App/ToDo_App/ToDo_App.csproj
+++ b/ToDo_App/ToDo_App/ToDo_App.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\ToDoController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\ToDo.cs">
