--- a/ToDo/ToDo/ToDo.csproj
+++ b/ToDo/ToDo/ToDo.csproj
@@ -132,6 +132,18 @@
     <Compile Include="Controllers\CloseButtonUserControl.Designer.cs">
       <DependentUpon>CloseButtonUserControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controllers\LoginForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Controllers\LoginForm.Designer.cs">
+      <DependentUpon>LoginForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controllers\LoginFormUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controllers\LoginFormUserControl.Designer.cs">
+      <DependentUpon>LoginFormUserControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controllers\SignUpForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -148,6 +160,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Controllers\CloseButtonUserControl.resx">
       <DependentUpon>CloseButtonUserControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controllers\LoginFormUserControl.resx">
+      <DependentUpon>LoginFormUserControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controllers\SignUpUserControl.resx">
       <DependentUpon>SignUpUserControl.cs</DependentUpon>
