--- a/ToDo/ToDo/ToDo.csproj
+++ b/ToDo/ToDo/ToDo.csproj
@@ -145,6 +145,18 @@
     <Compile Include="View\LoginFormUserControl.Designer.cs">
       <DependentUpon>LoginFormUserControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\MainPageForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\MainPageForm.Designer.cs">
+      <DependentUpon>MainPageForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\NavBarUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\NavBarUserControl.Designer.cs">
+      <DependentUpon>NavBarUserControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\SignUpForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -159,11 +171,20 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\TopBarUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\TopBarUserControl.Designer.cs">
+      <DependentUpon>TopBarUserControl.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="View\CloseButtonUserControl.resx">
       <DependentUpon>CloseButtonUserControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\LoginFormUserControl.resx">
       <DependentUpon>LoginFormUserControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\NavBarUserControl.resx">
+      <DependentUpon>NavBarUserControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\SignUpUserControl.resx">
       <DependentUpon>SignUpUserControl.cs</DependentUpon>
@@ -177,6 +198,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="View\TopBarUserControl.resx">
+      <DependentUpon>TopBarUserControl.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
