--- a/ToDo/ToDo/ToDo.csproj
+++ b/ToDo/ToDo/ToDo.csproj
@@ -215,5 +215,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Assets\home.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
